--- a/app/src/main/res/layout/fragment_workout_player.xml
+++ b/app/src/main/res/layout/fragment_workout_player.xml
@@ -58,13 +58,15 @@
     <!-- VideoView to play raw/video for current exercise. Hidden by default; shown when we have a playable video -->
     <VideoView
         android:id="@+id/videoPlayer"
-        android:layout_width="0dp"
-        android:layout_height="330dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnPlayerPlay"
         app:layout_constraintTop_toBottomOf="@id/topStatus"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="12dp"
-        android:visibility="visible"
+        app:layout_constraintHeight_percent="0.6"
+        android:visibility="gone"
         android:contentDescription="@string/exercise_video_cd" />
 
     <!-- Play controls overlay -->
@@ -73,52 +75,45 @@
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:background="@drawable/circle_bg"
-        android:src="@drawable/ic_play"
-        app:tint="@color/white"
         android:contentDescription="@string/play_cd"
-        app:layout_constraintTop_toBottomOf="@id/videoPlayer"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/ic_play"
+        android:translationY="-36dp"
+        app:layout_constraintBottom_toTopOf="@+id/controlsRow"
         app:layout_constraintEnd_toEndOf="parent"
-        android:translationY="-36dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:tint="@color/white" />
 
     <!-- Prev / Next row -->
     <LinearLayout
         android:id="@+id/controlsRow"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/btnPlayerPlay"
-        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="horizontal"
+        android:layout_marginBottom="30dp"
+        android:layout_marginHorizontal="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp">
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/btnPrev"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Prev" />
 
-        <View android:layout_width="16dp" android:layout_height="1dp" />
+        <View
+            android:layout_width="16dp"
+            android:layout_height="1dp" />
 
         <Button
             android:id="@+id/btnNext"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Next" />
     </LinearLayout>
 
-    <!-- Exercises list -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPlayerExercises"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/controlsRow"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="12dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
